apps/jellyfin/Service-jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8096
    targetPort: 8096
