apps/jellyfin/Ingress-jellyfin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jellyfin.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - jellyfin.slfhst.io
    secretName: jellyfin-tls
  rules:
  - host: jellyfin.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
